# chat-server

./: .gitignore  README.md  pyproject.toml
src/chatserver/: __init__.py  broker.py
src/chatserver/templates/: index.html
tests/: test_chat.py
