[project]
name = "chatserver"
version = "0.1.0"
description = "A simple asynchronous chat server based on quart."
authors = [
    { name = "Jiuh.star", email = "jiuh.star@gmail.com" }
]
dependencies = [
    "quart>=0.19.4",
]
readme = "README.md"
requires-python = ">= 3.8"

[project.scripts]
hello = "chatserver:hello"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "pytest-asyncio>=0.23.5",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/chatserver"]

[tool.rye.scripts]
start = "quart --app chatserver:app run"
test = "pytest tests/"

[tool.pytest.ini_options]
asyncio_mode = "auto"
